--- a/.env
+++ b/.env
@@ -45,4 +45,4 @@ MONGO_URI=mongodb+srv://shijas:Shijas9072@cluster0.zrdoj.mongodb.net/?retryWrite
 JWT_SECRET=your-secure-jwt-secret-12345
 
 # Port
-PORT=https://netyora-backend.onrender.com
+# PORT=https://netyora-backend.onrender.com
