develop mode support

--- a/.env
+++ b/.env
@@ -43,6 +43,6 @@ MONGO_URI=mongodb+srv://shijas:Shijas9072@cluster0.zrdoj.mongodb.net/?retryWrite
 
 # JWT Secret
 JWT_SECRET=your-secure-jwt-secret-12345
-
+CLIENT_URL = https://peppy-madeleine-72c4a8.netlify.app
 # Port
 # PORT=https://netyora-backend.onrender.com
