--- a/package.json
+++ b/package.json
@@ -19,34 +19,35 @@
   "dependencies": {
     "@zegocloud/zego-uikit-prebuilt": "^2.15.0",
     "agora-access-token": "^2.0.4",
-    "axios": "1.6.7",
+    "axios": "^1.10.0",
     "backblaze-b2": "^1.7.1",
     "bcryptjs": "2.4.3",
     "boxen": "^8.0.1",
     "chalk": "^5.4.1",
     "cloudinary": "1.41.3",
     "colors": "^1.4.0",
-    "compression": "1.7.4",
+    "compression": "^1.8.1",
     "cors": "2.8.5",
     "dotenv": "16.4.1",
-    "express": "4.18.2",
+    "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "express-validator": "7.0.1",
     "ffmpeg-static": "^5.2.0",
     "firebase": "^11.10.0",
+    "firebase-admin": "^13.4.0",
     "fluent-ffmpeg": "^2.1.2",
     "geolocation-utils": "^1.2.6",
     "helmet": "7.1.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "8.1.1",
-    "morgan": "1.10.0",
+    "mongoose": "^8.16.4",
+    "morgan": "^1.10.1",
     "multer": "1.4.5-lts.1",
     "multer-storage-cloudinary": "4.0.0",
     "rate-limit-redis": "^4.2.1",
     "redis": "4.6.13",
     "sharp": "^0.33.2",
-    "socket.io": "4.7.4",
+    "socket.io": "^4.8.1",
     "stream": "^0.0.2",
     "winston": "3.11.0"
   },
